# CanvasAI

./: .gitignore  README.md  run.sh  stop.sh
backend/: .env.example  README.md  pyproject.toml
backend/scripts/: check_llm_key.py  run_queued_knowledge_graph_jobs.py
backend/sql/: knowledge_graph.sql  knowledge_graph_embeddings.sql  knowledge_graph_topic_stats.sql  knowledge_graph_user_proposal.sql
backend/src/canvasai/: config.py  main.py  schemas.py
backend/src/canvasai/agents/: base.py  context_synthesizer.py  curriculum_planner.py  pedagogical_architect.py  retrieval_agent.py  schema_enforcer.py
backend/src/canvasai/api/: deps.py
backend/src/canvasai/api/routes/: active_recall.py  chat.py  documents.py  knowledge_graph.py  resources.py  sessions.py  ws.py
backend/src/canvasai/graph/: builder.py  state.py
backend/src/canvasai/inngest_app/: functions.py
backend/src/canvasai/knowledge_graph/: __init__.py  embeddings.py  mastery.py  merge.py  pipeline.py
backend/src/canvasai/llm/: gemini_provider.py  openai_provider.py  provider.py
backend/src/canvasai/storage/: active_recall.py  chat.py  client.py  documents.py  knowledge_graph.py  sessions.py  supabase_client.py
backend/tests/: test_knowledge_graph_merge.py
docs/: active_recall.md  agent_design.md  architecture.md  features.md  inngest.md  knowledge-graph.md  memory.md  updated_arch.md
frontend/: README.md  package-lock.json  package.json  pnpm-lock.yaml  proxy.ts
scripts/: run_knowledge_graph_dev.sh  run_separated.sh  stop_knowledge_graph_dev.sh
todo/: README.md  architecture.md  kd.md  (+9 more)
(+76 files in other folders)
