[project]
name = "canvasai"
version = "0.1.0"
description = "CanvasAI backend — FastAPI + LangGraph multi-agent orchestration."
readme = "README.md"
authors = [
    { name = "Dedeepya Avancha", email = "deepya1235@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "inngest>=0.5.18",
    "langchain-core>=1.3.2",
    "langchain-google-genai>=4.2.2",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.9",
    "pydantic-settings>=2",
    "pyjwt>=2.12.1",
    "python-multipart>=0.0.26",
    "supabase>=2",
    "uvicorn[standard]>=0.46.0",
]


[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"
